# Rasputin_Loop

./: .env.example  .gitignore  CLAUDE.md  README.md  architecture.md  progress.md  pyproject.toml
data/: loop.db  loop_vec.db
docs/: slack-assistant.md  vector-memory.md
evals/: golden.json
loop/: __init__.py  agent.py  ambient.py  context.py  embeddings.py  eval.py  guardrails.py  observability.py  slack_app.py  storage.py  tracing.py  vector_store.py
tests/: test_ambient.py  test_memory.py  test_vector_memory.py
