[project]
name = "loop"
version = "0.3.1"
description = "Loop — a Slack-native AI agent built on Strands"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.44.0",
    "strands-agents-tools>=0.8.1",
    "anthropic>=0.39.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
# Experimental semantic memory (feat/vector-memory-turso): libSQL/Turso native
# vector search + local embeddings. fastembed runs in-process (no API key).
vector = [
    "libsql-experimental>=0.0.40",
    "fastembed>=0.4.0",
]

[project.scripts]
loop = "loop.main:main"
loop-eval = "loop.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop"]