[project]
name = "loop"
version = "0.4.0"
description = "Loop — a Slack-native AI agent built on Strands"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=1.44.0",
    "strands-agents-tools>=0.8.1",
    "anthropic>=0.39.0",
    "slack-bolt>=1.18.0",
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
# Hybrid (lexical + semantic) memory: libSQL/Turso native vector search + local
# embeddings. fastembed runs in-process (no API key). Enable with
# LOOP_MEMORY_BACKEND=hybrid. See docs/vector-memory.md.
vector = [
    "libsql-experimental>=0.0.40",
    "fastembed>=0.4.0",
]
# Extra model providers for the env-selected provider factory (LOOP_MODEL_PROVIDER).
# The default `anthropic` path (and MiniMax via its Anthropic-compatible endpoint)
# needs nothing here — it uses the base `anthropic` dep. Bedrock also works out of
# the box (boto3 ships with strands). Install this extra only for openai/litellm/
# ollama/gemini: pip install -e ".[providers]".
providers = [
    "litellm>=1.40.0",
    "openai>=1.30.0",
    "ollama>=0.3.0",
    "google-genai>=0.3.0",
]

[project.scripts]
loop = "loop.main:main"
loop-eval = "loop.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["loop"]